# deltalog

./: .gitignore  Cargo.toml  README.md  example.json  example.parquet
src/: flight_client.rs  flight_server.rs  main.rs
